objects/FieloSVY__SurveyResponseQuestion__c.object
<CustomObject>
    <fields>
        <fullName>FieloSVY__FreeText__c</fullName>
        <label>Free Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloSVY__NumberOfTimesResponse__c</fullName>
        <label>Number of Times Response</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Numeric__c</fullName>
        <label>Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloSVY__Option__c</fullName>
        <label>Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloSVY__SurveyQuestion__c</fullName>
        <label>Survey Question</label>
        <referenceTo>FieloSVY__SurveyQuestion__c</referenceTo>
        <relationshipLabel>Survey Response Questions</relationshipLabel>
        <relationshipName>Survey_Response_Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloSVY__SurveyResponse__c</fullName>
        <label>Survey Response</label>
        <referenceTo>FieloSVY__SurveyResponse__c</referenceTo>
        <relationshipLabel>Survey Response Questions</relationshipLabel>
        <relationshipName>Survey_Response_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Response Question</label>
    <nameField>
        <displayFormat>RQ-{00000}</displayFormat>
        <label>Survey Response Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Response Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloSVY__FreeTextTooLong</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(FieloSVY__FreeText__c)&gt;32768</errorConditionFormula>
        <errorDisplayField>FieloSVY__FreeText__c</errorDisplayField>
        <errorMessage>Text is too long.</errorMessage>
    </validationRules>
</CustomObject>